@@ -1,3 +1,9 @@
+Thu Apr 30 19:51:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* compile.c (iseq_compile_each): revert r46873 and r46875, not to
+	  allow to execute private readers by pretending op assign.
+	  [ruby-core:68984] [Bug #11096]
+
 Thu Apr 30 17:02:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
 
 	* rational.c: Added documentation for rational literal.
